# SkillBox-Module_32-Task_2

./: CMakeLists.txt  README.md
base/: film.json
include/: addMovies.h  base.h
src/: CMakeLists.txt  addMovies.cpp  base.cpp  main.cpp  menu.cpp
